theme: fix spacing for tag flyout in Firefox #92

--- a/static/css/tags.css
+++ b/static/css/tags.css
@@ -28,7 +28,7 @@
     content: "";
     position: absolute;
     top:0;
-    left: -1em;
+    left: -.99em;
     width: 0;
     height: 0;
     border-color: transparent #8451a1 transparent transparent;
